Changed my 5`th H/W

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
                 <nav class="pages-body">
                     <ul>
                         <li class="pages">
-                            <a href="./index.html">Студия<div class="overlay-border"></div></a>
+                            <a href="./index.html" class="pages-studio-link">Студия<div class="overlay-border"></div></a>
                         </li>
-                        <li class="pages"><a href="./portfolio.html">Портфолио<div class="overlay-border second"></div></a>
+                        <li class="pages">
+                            <a href="./portfolio.html" class="pages-link">Портфолио</a>
                         </li>
-                        <li class="pages"><a href="#">Контакти<div class="overlay-border third"></div></a>
+                        <li class="pages">
+                            <a href="#" class="pages-link">Контакти</a>
                         </li>
                     </ul>    
                 </nav>       
