--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
           <nav class="pages-body">
             <ul>
               <li class="pages"><a href="./index.html">Студия</a></li>
-              <li class="pages"><a href="./portfolio.html">Портфолио</a></li>
+              <li class="pages"><a href="./portfolio.html"class="pages-portfolio-link">Портфолио<div class="overlay-border second"></div></a></li>
               <li class="pages"><a href="#">Контакти</a></li>
             </ul>
           </nav>
